force-app/main/default/objects/Claim__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>The number of days this claim has been open OR the number of days between the incident and the date filed. This field is automatically calculated.</description>
    <inlineHelpText>The number of days this claim has been open OR the number of days between the incident and the date filed. This field is automatically calculated.</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>