force-app/main/default/objects/Claim__c/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <description>The date the workplace incident occurred.</description>
    <inlineHelpText>The date the workplace incident occurred.</inlineHelpText>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>