force-app/main/default/objects/Claim__c/fields/Is_High_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be checked if the Settlement Amount exceeds the company-defined threshold. This field is calculated automatically.</description>
    <inlineHelpText>This box will be checked if the Settlement Amount exceeds the company-defined threshold. This field is calculated automatically.</inlineHelpText>
    <label>Is High Value</label>
    <type>Checkbox</type>
</CustomField>