force-app/main/default/objects/Claim__c/fields/Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount__c</fullName>
    <description>The amount paid out on the claim.</description>
    <inlineHelpText>The amount paid out on the claim.</inlineHelpText>
    <label>Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>