force-app/main/default/objects/Claim__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>The date this claim was settled. This field is calculated automatically.</description>
    <inlineHelpText>The date this claim was settled. This field is calculated automatically.</inlineHelpText>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>