force-app/main/default/objects/Claim__c/validationRules/Unique_Claim_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Claim_Number</fullName>
    <active>true</active>
    <description>Enforces a unique value in the Claim Number field.</description>
    <errorConditionFormula>AND(
  (VLOOKUP(
    $ObjectType.Claim__c.Fields.Name,
    $ObjectType.Claim__c.Fields.Name,
    Name
  ) = Name),
  OR(ISNEW(), ISCHANGED(Name))
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Claim Number must be unique.</errorMessage>
</ValidationRule>