force-app/main/default/objects/Claim__c/listViews/Pending_Claims.listView-meta.xml
<ListView>
    <fullName>Pending_Claims</fullName>
    <columns>NAME</columns>
    <columns>Date_Filed__c</columns>
    <columns>Injury_Type__c</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,In Review</value>
    </filters>
    <filters>
        <field>Insurance_Provider__c</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <label>Pending Claims</label>
</ListView>