force-app/main/default/objects/Claim__c/listViews/Test_Claims.listView-meta.xml
<ListView>
    <fullName>Test_Claims</fullName>
    <columns>NAME</columns>
    <columns>Days_Open__c</columns>
    <columns>Is_High_Value__c</columns>
    <columns>Settlement_Amount__c</columns>
    <columns>Settlement_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Insurance_Provider__c</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>Test Claims</label>
</ListView>